popravili smo linkove

--- a/WebApiPovezivanje/Pages/Detalji.razor
+++ b/WebApiPovezivanje/Pages/Detalji.razor
@@ -32,6 +32,6 @@ Proslijeđeni Id= @Id
 
     public void Nazad()
     {
-        navManager.NavigateTo("/osobe");
+        navManager.NavigateTo("osobe");
     }
 }
