--- a/WebApiPovezivanje/Pages/Delete.razor
+++ b/WebApiPovezivanje/Pages/Delete.razor
@@ -39,7 +39,7 @@ Proslijeđeni Id= @Id
 
     public void Nazad()
     {
-        navManager.NavigateTo("/osobe");
+        navManager.NavigateTo("osobe");
     }
 
     public async Task Obrisi()
